syntax = "proto3";

package agent.v1;

// TODO: documentation

option go_package = "vebridge/node/proto/agent/v1;agentv1";

service Agent {
  rpc SubmitVAA (SubmitVAARequest) returns (SubmitVAAResponse);
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);
}

message Empty {
}

message SubmitVAARequest {
  bytes vaa = 1;
  bool skip_preflight = 2;
}

message SubmitVAAResponse {
  string signature = 1;
}

message GetBalanceRequest{

}

message GetBalanceResponse{
  uint64 balance = 1;
}
